tests/phppt/errors/bad_token_type.phppt
--TEST--
Bad token types
--FILE--
<?php

ignore { T_HAKUNAMATATA·foo };

?>
--EXPECTF--
Undefined token type 'T_HAKUNAMATATA' on line 3.
